<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SensorStats" >

    <TextView
        android:id="@+id/help_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_text" />

    <RadioGroup
        android:id="@+id/speed_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/help_text"
        android:layout_below="@+id/help_text"
        android:checkedButton="@+id/medium" >
    
    	<RadioButton
	        android:id="@+id/slow"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_marginTop="14dp"
        	android:text="@string/slow" />

    	<RadioButton
	        android:id="@+id/medium"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/medium" />

	    <RadioButton
        	android:id="@+id/fast"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/fast" />

    	<RadioButton
	        android:id="@+id/fastest"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/fastest" />
    
    </RadioGroup>

    <TextView
        android:id="@+id/cur_sample_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/speed_select"
        android:layout_below="@+id/speed_select"
        android:layout_marginTop="24dp"
        android:text="@string/cur_sample_speed" />

    <TextView
        android:id="@+id/sample_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/cur_sample_speed"
        android:layout_alignBottom="@+id/cur_sample_speed"
        android:layout_alignRight="@+id/help_text"
        android:text="@string/default_speed" />

</RelativeLayout>